--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/iconsite.ico",
               "src/assets"
             ],
             "styles": [
@@ -91,5 +91,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d53f196b-4851-49c7-b65b-1065a2fec404"
   }
 }
