--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy:ghdocs": "ng build --output-path docs --base-href /Danichs.github.io/"
+    "deploy:ghdocs": "ng build --configuration production --output-path docs --base-href=https://Danichs.github.io/"
   },
   "private": true,
   "dependencies": {
